# data-mcp

./: .env.example  .gitignore  AGENTIC_WORKFLOW.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  smoke_test.py  test_request_source.py
.github/workflows/: docker.yml
examples/: connect_openai.py  connect_raw_sse.py
findata/: _datetime_utils.py  alphavantage.py  analyst_consensus.py  arima_forecast.py  binance.py  candlestick_patterns.py  cboe_volatility.py  coinbase.py  coingecko.py  diagnostics.py  earnings_calendar.py  equity_prices.py  factor_loadings.py  fama_french.py  fred.py  fundamentals.py  ken_french_factors.py  macro_indicators.py  news_gdelt.py  news_yfinance.py  ohlc_chart.py  polygon.py  returns_stats.py  sec_edgar.py  sector_exposure.py  sp500_composition.py  stooq.py  support_resistance.py  tiingo.py  trend_indicators.py  trend_regime.py  world_themes.py  wrds_data.py
findata_mcp/: __main__.py  server.py
findata_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: agent_pipeline.py
tests/: test_findata.py
